# PomodoroTimer

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Plan.md  PomodoroTimerQtTesting.pro  tricks.txt
ExampleFromOnline/: dialog.cpp  dialog.h  main.cpp
Notifications/: notifications_api.h  qt_notification_item.cpp
Notifications/LinuxNotifications/: CMakeLists.txt  lib_notify_wrapper.cpp
Notifications/WindowsNotifications/: CMakeLists.txt  simple_display.cpp
Notifications/WindowsNotificationsTestApp/: CMakeLists.txt  example_from_online.txt  qt_testing.cpp
PomodoroTimerApp/: main.cpp  mainwindow.cpp  mainwindow.h
PomodoroTimerApp/application/: Application.cpp  Application.h  ApplicationMode.h  Session.cpp  Session.h
PomodoroTimerApp/application/application_settings/: application_setting.cpp  application_setting.h  integer_setting.cpp  integer_setting.h  time_setting.cpp  time_setting.h
PomodoroTimerApp/gui/: MainWindowGuiBuilder.cpp  MainWindowGuiBuilder.h  main_window.cpp  main_window.h  main_window_gui_builder.cpp  main_window_gui_builder.h  mainwindow.cpp  mainwindow.h  settings_dialog.cpp  settings_dialog.h
PomodoroTimerApp/logging/: Logger.cpp  Logger.h
PomodoroTimerApp/pomodoro/: Pomodoro.cpp  Pomodoro.h  PomodoroSession.cpp  PomodoroSession.h  PomodoroState.cpp  PomodoroState.h  Run.cpp  Run.h  Session.cpp  Session.h
PomodoroTimerApp/stopwatch/: stopwatch.cpp  stopwatch.h
PomodoroTimerApp/utils/: PomodoroAppCommandLine.cpp  PomodoroAppCommandLine.h  app_directories.h  date_format_converter.h  date_time_format_converter.cpp  date_time_format_converter.h  get_logger_function.h  millisecondsToTimer.cpp  millisecondsToTimer.h  mockable_datetime.h
PomodoroTimerAppTest/: CMakeLists.txt  test_cmdline_parser.h  test_correct_strings.h  test_interface.h  test_interrupts.h  test_main_timer_values.h  test_pomodoro.h  test_pomodoro_session_misc.h  test_time_setting.h  test_timer_values.h  test_total_elapsed_times.h  tests.cpp
PomodoroTimerAppTest/test_util/: app_manip.h  common_checks.h  make_application.h  tests_h_common.h
